fix: pink stroke aligning

--- a/style.css
+++ b/style.css
@@ -1725,7 +1725,7 @@ button{
     align-items: center;
   }
 }
-@media (max-width: 389px) {
+@media (max-width: 3000px) {
   #sit-heading-and-stroke{
     align-items: center;
   }
